--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -380,7 +380,9 @@
         "\n",
         "doc4 = \"Glaciers, once colossal and unyielding, are undergoing a profound transformation in the face of an increasingly warming world. The sight of majestic ice fields and towering glaciers melting at an accelerated pace is not merely a spectacle of nature's fluctuations; it is a compelling signpost of the far-reaching impacts of climate change. As temperatures rise, the intricate balance between ice accumulation and melting tips precariously, ushering in a host of environmental, societal, and economic consequences that demand our immediate attention. The phenomenon of rising glacier melts is a global issue, transcending borders and affecting diverse regions. In the Arctic, the rapid retreat of glaciers threatens fragile ecosystems and the traditional ways of life of indigenous communities. As ice cover diminishes, it not only disrupts habitats for Arctic species but also contributes to sea-level rise, heightening the vulnerability of coastal populations worldwide. Glacier melts also extend their icy fingers to mountainous regions, where they play a vital role in supplying freshwater to countless communities downstream. The Himalayas, often referred to as the Third Pole, are experiencing accelerated ice loss with potential ramifications for billions of people who rely on these waters for drinking, irrigation, and energy generation. As glaciers recede, the delicate equilibrium between water supply and demand becomes precarious, increasing the potential for water scarcity and geopolitical tensions. The Antarctic, a continent largely hidden beneath a blanket of ice, is equally susceptible to the impacts of glacier melt. As ice shelves fracture and disintegrate, sea levels rise and coastal landscapes transform. The potential disintegration of massive ice sheets could result in sea-level rise measured in meters, reshaping coastlines and displacing populations. The causes of glacier melt are multi-faceted, primarily driven by the rise in global temperatures attributed to human activities. Greenhouse gas emissions, deforestation, and industrial practices contribute to the heat-trapping effect that warms the planet. This excess heat radiates into polar and mountainous regions, accelerating ice loss. Mitigating the consequences of rising glacier melts demands a comprehensive and collaborative approach. International agreements, such as the Paris Agreement, signify global recognition of the urgency to curb emissions and limit global temperature rise. Investment in renewable energy sources, sustainable land use practices, and resilient infrastructure are critical steps toward reducing the human footprint on the environment. Local and indigenous knowledge can also play a pivotal role in understanding and adapting to the changes in glacier dynamics. Empowering communities to engage in sustainable resource management and disaster preparedness is crucial to ensure their resilience in the face of a changing climate. The tale of melting glaciers is not one of inevitable demise but an invitation to embrace change and take decisive action. By acknowledging the interconnectedness of our actions and their consequences, we can alter the course of this narrative. As we navigate the uncharted waters of a warmer world, let the story of melting glaciers serve as a poignant reminder of our responsibility to safeguard the planet for current and future generations. It is a call to embrace a future where bold innovation, collective efforts, and an unwavering commitment to environmental stewardship lead us toward a more sustainable and harmonious coexistence with the natural world.\"\n",
         "\n",
-        "doc5 = \"The name Ferrari evokes a sense of speed, luxury, and innovation in the automotive world. Established in 1939 by Enzo Ferrari, the company has become synonymous with high-performance sports cars that blend cutting-edge technology with exquisite design. With a rich history spanning over eight decades, Ferrari has not only dominated the race tracks but has also left an indelible mark on the global automotive industry. Enzo Ferrari, a passionate racing enthusiast, initially established Auto Avio Costruzioni in 1939, focusing on producing racing cars. However, it was in 1947 that the first true Ferrari car, the 125 S, was born. Powered by a V12 engine, the 125 S marked the beginning of Ferrari's tradition of using powerful and meticulously crafted engines in their vehicles. Its victory in the Rome Grand Prix the same year laid the foundation for Ferrari's racing reputation. Throughout the 1950s and 1960s, Ferrari cemented its reputation as a formidable force on the racing circuit. The brand clinched multiple victories in prestigious races like the 24 Hours of Le Mans, Formula One World Championships, and the Mille Miglia. Iconic drivers such as Juan Manuel Fangio and Phil Hill played pivotal roles in establishing Ferrari as a dominant force in motorsports. While Ferrari's racing achievements were remarkable, the brand also made strides in producing street-legal supercars that embodied the perfect marriage of performance and luxury. The 1960s witnessed the introduction of legendary models like the Ferrari 250 GTO and the Ferrari Daytona. These cars not only showcased the brand's commitment to performance but also displayed the elegance and sophistication that Ferrari was becoming known for. Ferrari's commitment to innovation has been a driving force behind its success. The brand has consistently pushed the boundaries of automotive technology, introducing advancements that have filtered down to everyday vehicles. Notable innovations include the introduction of the first mid-engined road car, the Ferrari Dino 206 GT, and the use of Formula One-derived technology in models like the Ferrari F40 and the LaFerrari. Ferrari's impact extends beyond the realm of racing and engineering. The brand's prancing horse logo has become an emblem of luxury and performance, symbolizing a lifestyle associated with speed and exclusivity. Ferrari's unique designs, characterized by sleek lines and aerodynamic contours, have consistently captured the imagination of car enthusiasts and the general public alike. The path to success for Ferrari has not been without challenges. Financial struggles and changing market dynamics have at times posed threats to the company's stability. However, Ferrari's ability to adapt and evolve has enabled it to weather these storms and continue producing high-performance vehicles that cater to the desires of its discerning clientele. As the world has become increasingly conscious of environmental concerns, Ferrari, like other automotive manufacturers, has had to balance its performance-focused legacy with sustainability. The brand's foray into hybrid technology, with models like the SF90 Stradale, showcases its commitment to reducing emissions while still delivering exhilarating performance. In conclusion, Ferrari's history is a tapestry woven with speed, elegance, and innovation. From its humble beginnings as a racing team to its status as a global luxury brand, Ferrari's journey has been marked by groundbreaking achievements on the track and revolutionary advancements in automotive technology. The prancing horse emblem remains a symbol of excellence and passion, embodying the spirit of Enzo Ferrari's enduring vision. As the brand continues to evolve, it will undoubtedly carve new chapters in the annals of automotive history, upholding its legacy as a true icon of speed and style.\""
+        "doc5 = \"The name Ferrari evokes a sense of speed, luxury, and innovation in the automotive world. Established in 1939 by Enzo Ferrari, the company has become synonymous with high-performance sports cars that blend cutting-edge technology with exquisite design. With a rich history spanning over eight decades, Ferrari has not only dominated the race tracks but has also left an indelible mark on the global automotive industry. Enzo Ferrari, a passionate racing enthusiast, initially established Auto Avio Costruzioni in 1939, focusing on producing racing cars. However, it was in 1947 that the first true Ferrari car, the 125 S, was born. Powered by a V12 engine, the 125 S marked the beginning of Ferrari's tradition of using powerful and meticulously crafted engines in their vehicles. Its victory in the Rome Grand Prix the same year laid the foundation for Ferrari's racing reputation. Throughout the 1950s and 1960s, Ferrari cemented its reputation as a formidable force on the racing circuit. The brand clinched multiple victories in prestigious races like the 24 Hours of Le Mans, Formula One World Championships, and the Mille Miglia. Iconic drivers such as Juan Manuel Fangio and Phil Hill played pivotal roles in establishing Ferrari as a dominant force in motorsports. While Ferrari's racing achievements were remarkable, the brand also made strides in producing street-legal supercars that embodied the perfect marriage of performance and luxury. The 1960s witnessed the introduction of legendary models like the Ferrari 250 GTO and the Ferrari Daytona. These cars not only showcased the brand's commitment to performance but also displayed the elegance and sophistication that Ferrari was becoming known for. Ferrari's commitment to innovation has been a driving force behind its success. The brand has consistently pushed the boundaries of automotive technology, introducing advancements that have filtered down to everyday vehicles. Notable innovations include the introduction of the first mid-engined road car, the Ferrari Dino 206 GT, and the use of Formula One-derived technology in models like the Ferrari F40 and the LaFerrari. Ferrari's impact extends beyond the realm of racing and engineering. The brand's prancing horse logo has become an emblem of luxury and performance, symbolizing a lifestyle associated with speed and exclusivity. Ferrari's unique designs, characterized by sleek lines and aerodynamic contours, have consistently captured the imagination of car enthusiasts and the general public alike. The path to success for Ferrari has not been without challenges. Financial struggles and changing market dynamics have at times posed threats to the company's stability. However, Ferrari's ability to adapt and evolve has enabled it to weather these storms and continue producing high-performance vehicles that cater to the desires of its discerning clientele. As the world has become increasingly conscious of environmental concerns, Ferrari, like other automotive manufacturers, has had to balance its performance-focused legacy with sustainability. The brand's foray into hybrid technology, with models like the SF90 Stradale, showcases its commitment to reducing emissions while still delivering exhilarating performance. In conclusion, Ferrari's history is a tapestry woven with speed, elegance, and innovation. From its humble beginnings as a racing team to its status as a global luxury brand, Ferrari's journey has been marked by groundbreaking achievements on the track and revolutionary advancements in automotive technology. The prancing horse emblem remains a symbol of excellence and passion, embodying the spirit of Enzo Ferrari's enduring vision. As the brand continues to evolve, it will undoubtedly carve new chapters in the annals of automotive history, upholding its legacy as a true icon of speed and style.\"\n",
+        "\n",
+        "doc6 = \"National Archives Yes, it's that time again, folks. It's the first Friday of the month, when for one ever-so-brief moment the interests of Wall Street, Washington and Main Street are all aligned on one thing: Jobs. A fresh update on the U.S. employment situation for January hits the wires at 8:30 a.m. New York time offering one of the most important snapshots on how the economy fared during the previous month. Expectations are for 203,000 new jobs to be created, according to economists polled by Dow Jones Newswires, compared to 227,000 jobs added in February. The unemployment rate is expected to hold steady at 8.3%. Here at MarketBeat HQ, we’ll be offering color commentary before and after the data crosses the wires. Feel free to weigh-in yourself, via the comments section. And while you're here, why don't you sign up to follow us on Twitter. Enjoy the show. ||||| Employers pulled back sharply on hiring last month, a reminder that the U.S. economy may not be growing fast enough to sustain robust job growth. The unemployment rate dipped, but mostly because more Americans stopped looking for work. The Labor Department says the economy added 120,000 jobs in March, down from more than 200,000 in each of the previous three months. The unemployment rate fell to 8.2 percent, the lowest since January 2009. The rate dropped because fewer people searched for jobs. The official unemployment tally only includes those seeking work. The economy has added 858,000 jobs since December _ the best four months of hiring in two years. But Federal Reserve Chairman Ben Bernanke has cautioned that the current hiring pace is unlikely to continue without more consumer spending.\""
       ]
     },
     {
@@ -404,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -415,28 +417,101 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "'<pad> Climate change is an escalating global crisis with dire implications for our planet.</s>'"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<pad> Climate change is an escalating global crisis with dire implications for our planet.</s>\n"
+          ]
         }
       ],
       "source": [
-        "predicted_summary = predict_summary(doc)\n",
-        "\n",
-        "predicted_summary"
+        "print(predict_summary(doc))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<pad> The history of the world is a captivating narrative that unfolds across the ages, painting a vivid portrait of humanity's evolution, achievements, challenges, and aspirations.</s>\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(predict_summary(doc2))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<pad> The future of technology and the future of education</s>\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(predict_summary(doc3))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<pad> glacier melt.</s>\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(predict_summary(doc4))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<pad> Ferrari's prancing horse logo, have been a driving force behind its success.</s>\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(predict_summary(doc5))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<pad> – The unemployment rate fell sharply in March, but the numbers aren't so bad: The unemployment rate fell to 8.2%, the lowest since January 2009. The unemployment rate is expected to hold steady at 8.3%, reports MarketBeat. The unemployment rate is expected to hold steady at 8.3%, reports the Wall Street Journal. The economy added 120,000 jobs in March, down from more than 200,000 in each of the previous three months. The unemployment rate dropped to 8.2%, the lowest since January 2009. The official unemployment tally only includes those seeking work. The economy has added 858,000\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(predict_summary(doc6))"
+      ]
     }
   ],
   "metadata": {
