--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -363,7 +363,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Testing the Model for a Example"
+        "# Testing the Model for Some Examples"
       ]
     },
     {
