--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -386,6 +386,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Function to compute prediction"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
