--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -413,6 +413,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Predictions"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
