--- a/main.ipynb
+++ b/main.ipynb
@@ -664,17 +664,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "id": "UJe3VcI6IWXN"
-      },
-      "outputs": [],
-      "source": [
-        "#torch.cuda.empty_cache()"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 17,
       "metadata": {
         "colab": {
@@ -746,6 +735,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Save the Model"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
@@ -754,6 +751,14 @@
       "outputs": [],
       "source": [
         "trainer.save_model(\"./model/\")"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Test"
       ]
     },
     {
@@ -845,6 +850,14 @@
       "source": [
         "predicted_summary = predict_summary(document)\n",
         "predicted_summary"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Push to Hugging Face"
       ]
     },
     {
