--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -142,6 +142,9 @@
         "from torch import nn\n",
         "from transformers import AutoTokenizer, DataCollatorForSeq2Seq, AutoModelForSeq2SeqLM, Seq2SeqTrainingArguments, Seq2SeqTrainer\n",
         "import accelerate\n",
+        "from rouge import Rouge\n",
+        "from tqdm import tqdm\n",
+        "from datasets import load_dataset\n",
         "\n",
         "sns.set()"
       ]
@@ -527,6 +530,191 @@
       ],
       "source": [
         "print(predict_summary(doc6))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Getting Validation set "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dataset = load_dataset(\"multi_news\", split = \"validation\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>document</th>\n",
+              "      <th>summary</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Whether a sign of a good read; or a comment on...</td>\n",
+              "      <td>– The Da Vinci Code has sold so many copies—th...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>The deaths of three American soldiers in Afgha...</td>\n",
+              "      <td>– A major snafu has hit benefit payments to st...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>DUBAI Al Qaeda in Yemen has claimed responsibi...</td>\n",
+              "      <td>– Yemen-based al-Qaeda in the Arabian Peninsul...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Cambridge Analytica, a data firm that worked f...</td>\n",
+              "      <td>– Cambridge Analytica is calling it quits. The...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>The N.S.A.’s Evolution: The National Security ...</td>\n",
+              "      <td>– A lengthy report in the New York Times, base...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                            document  \\\n",
+              "0  Whether a sign of a good read; or a comment on...   \n",
+              "1  The deaths of three American soldiers in Afgha...   \n",
+              "2  DUBAI Al Qaeda in Yemen has claimed responsibi...   \n",
+              "3  Cambridge Analytica, a data firm that worked f...   \n",
+              "4  The N.S.A.’s Evolution: The National Security ...   \n",
+              "\n",
+              "                                             summary  \n",
+              "0  – The Da Vinci Code has sold so many copies—th...  \n",
+              "1  – A major snafu has hit benefit payments to st...  \n",
+              "2  – Yemen-based al-Qaeda in the Arabian Peninsul...  \n",
+              "3  – Cambridge Analytica is calling it quits. The...  \n",
+              "4  – A lengthy report in the New York Times, base...  "
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "val_data = dataset.to_pandas()\n",
+        "val_data.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def get_rouge_scores(actual_summary, predicted_summary):\n",
+        "    rouge = Rouge()\n",
+        "    scores = rouge.get_scores(predicted_summary, actual_summary)\n",
+        "    return [scores[0]['rouge-1']['f'], scores[0]['rouge-2']['f'], scores[0]['rouge-l']['f']]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  1%|          | 30/5622 [01:33<4:52:40,  3.14s/it]"
+          ]
+        }
+      ],
+      "source": [
+        "rouge1_scores = []\n",
+        "rouge2_scores = []\n",
+        "rougel_scores = []\n",
+        "\n",
+        "pred_summary_list = []\n",
+        "\n",
+        "for i in tqdm(range(len(val_data))):\n",
+        "\n",
+        "  doc = val_data.loc[i]['document']\n",
+        "  pred_summary = predict_summary(doc)\n",
+        "  human_summary = val_data.loc[i]['summary']\n",
+        "\n",
+        "  score = get_rouge_scores(human_summary, pred_summary)\n",
+        "\n",
+        "  rouge1_scores.append(score[0])\n",
+        "  rouge2_scores.append(score[1])\n",
+        "  rougel_scores.append(score[2])\n",
+        "\n",
+        "  pred_summary_list.append(pred_summary)\n",
+        "\n",
+        "val_data[\"pred_summary\"] = pred_summary_list\n",
+        "\n",
+        "val_data['rouge1'] = rouge1_scores\n",
+        "val_data['rouge2'] = rouge2_scores\n",
+        "val_data['rougel'] = rougel_scores\n",
+        "\n",
+        "val_data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "val_data['rouge1'].mean()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "val_data['rouge2'].mean()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "val_data['rougel'].mean()"
       ]
     }
   ],
