--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -551,7 +551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -605,34 +605,79 @@
               "      <td>The N.S.A.’s Evolution: The National Security ...</td>\n",
               "      <td>– A lengthy report in the New York Times, base...</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>295</th>\n",
+              "      <td>These crawls are part of an effort to archive ...</td>\n",
+              "      <td>– Scientists are on the brink of turning light...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>296</th>\n",
+              "      <td>CANNES, France (AP) — A man rushed onto the re...</td>\n",
+              "      <td>– America Ferrera endured the creepiest kind o...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>297</th>\n",
+              "      <td>UPDATE: November 8, 8:25 AM CST \\n \\n We want ...</td>\n",
+              "      <td>– Perhaps he found inspiration in Willow. Jack...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>298</th>\n",
+              "      <td>The following message was released to the CIA ...</td>\n",
+              "      <td>– Wow. We knew President Obama would be replac...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>299</th>\n",
+              "      <td>Gilbert dog kennel kept accepting pets after o...</td>\n",
+              "      <td>– Nothing seemed amiss when Snow Aubel dropped...</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>300 rows × 2 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                            document  \\\n",
-              "0  Whether a sign of a good read; or a comment on...   \n",
-              "1  The deaths of three American soldiers in Afgha...   \n",
-              "2  DUBAI Al Qaeda in Yemen has claimed responsibi...   \n",
-              "3  Cambridge Analytica, a data firm that worked f...   \n",
-              "4  The N.S.A.’s Evolution: The National Security ...   \n",
+              "                                              document  \\\n",
+              "0    Whether a sign of a good read; or a comment on...   \n",
+              "1    The deaths of three American soldiers in Afgha...   \n",
+              "2    DUBAI Al Qaeda in Yemen has claimed responsibi...   \n",
+              "3    Cambridge Analytica, a data firm that worked f...   \n",
+              "4    The N.S.A.’s Evolution: The National Security ...   \n",
+              "..                                                 ...   \n",
+              "295  These crawls are part of an effort to archive ...   \n",
+              "296  CANNES, France (AP) — A man rushed onto the re...   \n",
+              "297  UPDATE: November 8, 8:25 AM CST \\n \\n We want ...   \n",
+              "298  The following message was released to the CIA ...   \n",
+              "299  Gilbert dog kennel kept accepting pets after o...   \n",
               "\n",
-              "                                             summary  \n",
-              "0  – The Da Vinci Code has sold so many copies—th...  \n",
-              "1  – A major snafu has hit benefit payments to st...  \n",
-              "2  – Yemen-based al-Qaeda in the Arabian Peninsul...  \n",
-              "3  – Cambridge Analytica is calling it quits. The...  \n",
-              "4  – A lengthy report in the New York Times, base...  "
+              "                                               summary  \n",
+              "0    – The Da Vinci Code has sold so many copies—th...  \n",
+              "1    – A major snafu has hit benefit payments to st...  \n",
+              "2    – Yemen-based al-Qaeda in the Arabian Peninsul...  \n",
+              "3    – Cambridge Analytica is calling it quits. The...  \n",
+              "4    – A lengthy report in the New York Times, base...  \n",
+              "..                                                 ...  \n",
+              "295  – Scientists are on the brink of turning light...  \n",
+              "296  – America Ferrera endured the creepiest kind o...  \n",
+              "297  – Perhaps he found inspiration in Willow. Jack...  \n",
+              "298  – Wow. We knew President Obama would be replac...  \n",
+              "299  – Nothing seemed amiss when Snow Aubel dropped...  \n",
+              "\n",
+              "[300 rows x 2 columns]"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "val_data = dataset.to_pandas()\n",
-        "val_data.head()"
+        "val_data = dataset.to_pandas().head(300)\n",
+        "val_data"
       ]
     },
     {
@@ -649,15 +694,209 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "  1%|          | 30/5622 [01:33<4:52:40,  3.14s/it]"
+            "100%|██████████| 300/300 [16:03<00:00,  3.21s/it]\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>document</th>\n",
+              "      <th>summary</th>\n",
+              "      <th>pred_summary</th>\n",
+              "      <th>rouge1</th>\n",
+              "      <th>rouge2</th>\n",
+              "      <th>rougel</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Whether a sign of a good read; or a comment on...</td>\n",
+              "      <td>– The Da Vinci Code has sold so many copies—th...</td>\n",
+              "      <td>&lt;pad&gt; – Dan Brown's latest book, The Lost Symb...</td>\n",
+              "      <td>0.209524</td>\n",
+              "      <td>0.033784</td>\n",
+              "      <td>0.200000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>The deaths of three American soldiers in Afgha...</td>\n",
+              "      <td>– A major snafu has hit benefit payments to st...</td>\n",
+              "      <td>&lt;pad&gt; VA announced the information technology ...</td>\n",
+              "      <td>0.032086</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.021390</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>DUBAI Al Qaeda in Yemen has claimed responsibi...</td>\n",
+              "      <td>– Yemen-based al-Qaeda in the Arabian Peninsul...</td>\n",
+              "      <td>&lt;pad&gt; Al Qaeda in Yemen, a group that has been...</td>\n",
+              "      <td>0.108844</td>\n",
+              "      <td>0.010050</td>\n",
+              "      <td>0.081633</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Cambridge Analytica, a data firm that worked f...</td>\n",
+              "      <td>– Cambridge Analytica is calling it quits. The...</td>\n",
+              "      <td>&lt;pad&gt; – The SCL Group is closing its doors to ...</td>\n",
+              "      <td>0.278146</td>\n",
+              "      <td>0.074074</td>\n",
+              "      <td>0.278146</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>The N.S.A.’s Evolution: The National Security ...</td>\n",
+              "      <td>– A lengthy report in the New York Times, base...</td>\n",
+              "      <td>&lt;pad&gt; The National Security Agency has been a ...</td>\n",
+              "      <td>0.102273</td>\n",
+              "      <td>0.009302</td>\n",
+              "      <td>0.102273</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>295</th>\n",
+              "      <td>These crawls are part of an effort to archive ...</td>\n",
+              "      <td>– Scientists are on the brink of turning light...</td>\n",
+              "      <td>&lt;pad&gt; – The first atomic bomb was a shambles, ...</td>\n",
+              "      <td>0.257778</td>\n",
+              "      <td>0.056962</td>\n",
+              "      <td>0.213333</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>296</th>\n",
+              "      <td>CANNES, France (AP) — A man rushed onto the re...</td>\n",
+              "      <td>– America Ferrera endured the creepiest kind o...</td>\n",
+              "      <td>&lt;pad&gt; America Ferrera, who was in good spirits...</td>\n",
+              "      <td>0.094118</td>\n",
+              "      <td>0.009479</td>\n",
+              "      <td>0.094118</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>297</th>\n",
+              "      <td>UPDATE: November 8, 8:25 AM CST \\n \\n We want ...</td>\n",
+              "      <td>– Perhaps he found inspiration in Willow. Jack...</td>\n",
+              "      <td>&lt;pad&gt; Jack the cat has passed away, we want to...</td>\n",
+              "      <td>0.227273</td>\n",
+              "      <td>0.033898</td>\n",
+              "      <td>0.204545</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>298</th>\n",
+              "      <td>The following message was released to the CIA ...</td>\n",
+              "      <td>– Wow. We knew President Obama would be replac...</td>\n",
+              "      <td>&lt;pad&gt; – David Petraeus has stepped down as the...</td>\n",
+              "      <td>0.206573</td>\n",
+              "      <td>0.034722</td>\n",
+              "      <td>0.197183</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>299</th>\n",
+              "      <td>Gilbert dog kennel kept accepting pets after o...</td>\n",
+              "      <td>– Nothing seemed amiss when Snow Aubel dropped...</td>\n",
+              "      <td>&lt;pad&gt; The Gilbert dog kennel where 20 dogs per...</td>\n",
+              "      <td>0.132159</td>\n",
+              "      <td>0.020000</td>\n",
+              "      <td>0.105727</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>300 rows × 6 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                              document  \\\n",
+              "0    Whether a sign of a good read; or a comment on...   \n",
+              "1    The deaths of three American soldiers in Afgha...   \n",
+              "2    DUBAI Al Qaeda in Yemen has claimed responsibi...   \n",
+              "3    Cambridge Analytica, a data firm that worked f...   \n",
+              "4    The N.S.A.’s Evolution: The National Security ...   \n",
+              "..                                                 ...   \n",
+              "295  These crawls are part of an effort to archive ...   \n",
+              "296  CANNES, France (AP) — A man rushed onto the re...   \n",
+              "297  UPDATE: November 8, 8:25 AM CST \\n \\n We want ...   \n",
+              "298  The following message was released to the CIA ...   \n",
+              "299  Gilbert dog kennel kept accepting pets after o...   \n",
+              "\n",
+              "                                               summary  \\\n",
+              "0    – The Da Vinci Code has sold so many copies—th...   \n",
+              "1    – A major snafu has hit benefit payments to st...   \n",
+              "2    – Yemen-based al-Qaeda in the Arabian Peninsul...   \n",
+              "3    – Cambridge Analytica is calling it quits. The...   \n",
+              "4    – A lengthy report in the New York Times, base...   \n",
+              "..                                                 ...   \n",
+              "295  – Scientists are on the brink of turning light...   \n",
+              "296  – America Ferrera endured the creepiest kind o...   \n",
+              "297  – Perhaps he found inspiration in Willow. Jack...   \n",
+              "298  – Wow. We knew President Obama would be replac...   \n",
+              "299  – Nothing seemed amiss when Snow Aubel dropped...   \n",
+              "\n",
+              "                                          pred_summary    rouge1    rouge2  \\\n",
+              "0    <pad> – Dan Brown's latest book, The Lost Symb...  0.209524  0.033784   \n",
+              "1    <pad> VA announced the information technology ...  0.032086  0.000000   \n",
+              "2    <pad> Al Qaeda in Yemen, a group that has been...  0.108844  0.010050   \n",
+              "3    <pad> – The SCL Group is closing its doors to ...  0.278146  0.074074   \n",
+              "4    <pad> The National Security Agency has been a ...  0.102273  0.009302   \n",
+              "..                                                 ...       ...       ...   \n",
+              "295  <pad> – The first atomic bomb was a shambles, ...  0.257778  0.056962   \n",
+              "296  <pad> America Ferrera, who was in good spirits...  0.094118  0.009479   \n",
+              "297  <pad> Jack the cat has passed away, we want to...  0.227273  0.033898   \n",
+              "298  <pad> – David Petraeus has stepped down as the...  0.206573  0.034722   \n",
+              "299  <pad> The Gilbert dog kennel where 20 dogs per...  0.132159  0.020000   \n",
+              "\n",
+              "       rougel  \n",
+              "0    0.200000  \n",
+              "1    0.021390  \n",
+              "2    0.081633  \n",
+              "3    0.278146  \n",
+              "4    0.102273  \n",
+              "..        ...  \n",
+              "295  0.213333  \n",
+              "296  0.094118  \n",
+              "297  0.204545  \n",
+              "298  0.197183  \n",
+              "299  0.105727  \n",
+              "\n",
+              "[300 rows x 6 columns]"
+            ]
+          },
+          "execution_count": 30,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -670,16 +909,16 @@
         "for i in tqdm(range(len(val_data))):\n",
         "\n",
         "  doc = val_data.loc[i]['document']\n",
-        "  pred_summary = predict_summary(doc)\n",
-        "  human_summary = val_data.loc[i]['summary']\n",
+        "  pred_summ = predict_summary(doc)\n",
+        "  summ_lab = val_data.loc[i]['summary']\n",
         "\n",
-        "  score = get_rouge_scores(human_summary, pred_summary)\n",
+        "  score = get_rouge_scores(summ_lab, pred_summ)\n",
         "\n",
         "  rouge1_scores.append(score[0])\n",
         "  rouge2_scores.append(score[1])\n",
         "  rougel_scores.append(score[2])\n",
         "\n",
-        "  pred_summary_list.append(pred_summary)\n",
+        "  pred_summary_list.append(pred_summ)\n",
         "\n",
         "val_data[\"pred_summary\"] = pred_summary_list\n",
         "\n",
@@ -692,29 +931,71 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.1550438133944506"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "val_data['rouge1'].mean()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.044435676293820475"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "val_data['rouge2'].mean()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.14188023556089915"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "val_data['rougel'].mean()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
-        "val_data['rougel'].mean()"
+        "val_data.to_csv('final_Output.csv')"
       ]
     }
   ],
